test/lambda/negative/syntax/mixed_if_stam.ls
// @expect-error: E100
// @description: Cannot use bare expression in then-branch of if-statement

if true 1 else { 2 }
